--- a/index.html
+++ b/index.html
@@ -12,149 +12,182 @@
 </head>
 
 <body>
-    <!--NAVBAR-->
-    <nav>
-        <h1>Jérôme Ricquebourg</h1>
-        <ul class="navigation">
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projets</a></li>
-            <li><a href="#contacts">Contacts</a></li>
-        </ul>
-        <button class="burger-menu" id="burger-menu">
-            <ion-icon class="bars" name="menu-outline"></ion-icon>
-        </button>
-    </nav>
-    <!--FIN NAVBAR-->
-    <!--SECTION-->
-    <section class="hero" id="about">
-        <img src="assets/image/confluence.jpg" alt="Jerome Ricquebourg" loading="lazy" class="hero-img">
-        <div class="bio animate_animated animate_shakeX">
-            <h2 class="bioe-title"> About Me</h2>
-            <p class="bio-text">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum nostrum, officia facilis illo expedita
-                perferendis excepturi rem voluptates, iusto velit reiciendis, exercitationem nesciunt. Expedita nam
-                similique qui mollitia cumque corrupti!
-            </p>
-        </div>
-    </section>
-    <!--FIN SECTION-->
-    <!--MORE ABOUT-->
-    <section class="more-about">
-        <h2>Plus d'information sur moi</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam dolores, expedita maxime voluptatibus dolorum
-            ut quia, repellendus vel vitae mollitia architecto ea pariatur fuga placeat obcaecati deserunt blanditiis
-            repudiandae a.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam dolores, expedita maxime voluptatibus dolorum
-            ut quia, repellendus vel vitae mollitia architecto ea pariatur fuga placeat obcaecati deserunt blanditiis
-            repudiandae a.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam dolores, expedita maxime voluptatibus dolorum
-            ut quia, repellendus vel vitae mollitia architecto ea pariatur fuga placeat obcaecati deserunt blanditiis
-            repudiandae a.</p>
-    </section>
-    <!--Fin section MORE ABOUT-->
-    <!--SKILLS SECTION-->
-    <section class="skills" id="skills">
-        <h2 class="skill-header">Mes Top Skills</h2>
-        <div class="skills-wrapper">
-            <div class="first-set animate_animated animate_pulse">
-                <img src="/assets/image/icons8-html-5.svg"
-                alt="html"
-                loading="lazy"
-                class="icon icon-card"
-                />
-                <img 
-                src="/assets/image/icons8-css3.svg"
-                alt="html"
-                loading="lazy"
-                class="icon icon-card"
-                />
-                <img 
-                src="/assets/image/icons8-javascript (1).svg"
-                alt="html"
-                loading="lazy"
-                class="icon icon-card"
-                />
-            </div>
-        </div>
-        <div class="skills-wrapper">
-            <div class="second-set animate_animated animate_pulse">
-                <img src="/assets/image/icons8-git.svg"
-                alt="html"
-                loading="lazy"
-                class="icon icon-card"
-                />
-                <img 
-                src="/assets/image/icons8-react-native (1).svg"
-                alt="html"
-                loading="lazy"
-                class="icon icon-card"
-                />
-                <img 
-                src="/assets/image/icons8-bootstrap.svg"
-                alt="html"
-                loading="lazy"
-                class="icon icon-card"
-                />
-            </div>
-        </div>
-    </section>
-    <!--FIN SKILLES ACTIONS-->
-    <!--PROJEctS SECTION-->
-    <section class="projects" id="projects">
-        <h2 class="porjects-title">Mes projects</h2>
-        <div class="projects-container">
-            <div class="project-container project-card">
-                <div class="image"><img
-                src="/assets/image/confluence 1.jpg"
-                alt="1er project"
-                loading="lazy"
-                class="project-pic"
-                />
-            </div>
-                <h3 class="project-title">1er project</h3>
-                <p class="project-details">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eum, doloremque eligendi sunt aliquid dolorem accusantium ut rem deserunt ea et eius minima velit. Error iste atque quidem exercitationem minima!
+    <!--PARALLAX-->
+    <div class="parallax">
+        <!--NAVBAR-->
+        <nav>
+            <h1>Jérôme Ricquebourg</h1>
+            <ul class="navigation">
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projets</a></li>
+                <li><a href="#contacts">Contacts</a></li>
+            </ul>
+            <button class="burger-menu" id="burger-menu">
+                <ion-icon class="bars" name="menu-outline"></ion-icon>
+            </button>
+        </nav>
+        <!--FIN NAVBAR-->
+        <!--SECTION-->
+        <section class="hero" id="about">
+            <img src="assets/image/confluence.jpg" alt="Jerome Ricquebourg" loading="lazy" class="hero-img">
+            <div class="bio animate_animated animate_shakeX">
+                <h2 class="bioe-title"> About Me</h2>
+                <p class="bio-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum nostrum, officia facilis illo
+                    expedita
+                    perferendis excepturi rem voluptates, iusto velit reiciendis, exercitationem nesciunt. Expedita nam
+                    similique qui mollitia cumque corrupti!
                 </p>
-                <a href="#" target="_blank" class="project-link">Go voir
+            </div>
+        </section>
+        <!--FIN SECTION-->
+        <!--MORE ABOUT-->
+        <section class="more-about">
+            <h2>Plus d'information sur moi</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam dolores, expedita maxime voluptatibus
+                dolorum
+                ut quia, repellendus vel vitae mollitia architecto ea pariatur fuga placeat obcaecati deserunt
+                blanditiis
+                repudiandae a.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam dolores, expedita maxime voluptatibus
+                dolorum
+                ut quia, repellendus vel vitae mollitia architecto ea pariatur fuga placeat obcaecati deserunt
+                blanditiis
+                repudiandae a.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam dolores, expedita maxime voluptatibus
+                dolorum
+                ut quia, repellendus vel vitae mollitia architecto ea pariatur fuga placeat obcaecati deserunt
+                blanditiis
+                repudiandae a.</p>
+        </section>
+        <!--Fin section MORE ABOUT-->
+        <!--SKILLS SECTION-->
+        <section class="skills" id="skills">
+            <h2 class="skill-header">Mes Top Skills</h2>
+            <div class="skills-wrapper">
+                <div class="first-set animate_animated animate_pulse">
+                    <img src="assets/image/icons8-html-5.svg" alt="html" loading="lazy" class="icon icon-card" />
+                    <img src="assets/image/icons8-css3.svg" alt="html" loading="lazy" class="icon icon-card" />
+                    <img src="assets/image/icons8-javascript (1).svg" alt="html" loading="lazy"
+                        class="icon icon-card" />
+                </div>
+            </div>
+            <div class="skills-wrapper">
+                <div class="second-set animate_animated animate_pulse">
+                    <img src="assets/image/icons8-git.svg" alt="html" loading="lazy" class="icon icon-card" />
+                    <img src="assets/image/icons8-react-native (1).svg" alt="html" loading="lazy"
+                        class="icon icon-card" />
+                    <img src="assets/image/icons8-bootstrap.svg" alt="html" loading="lazy" class="icon icon-card" />
+                </div>
+            </div>
+        </section>
+        <!--FIN SKILLES ACTIONS-->
+        <!--PROJEctS SECTION-->
+        <section class="projects" id="projects">
+            <h2 class="projects-title">Mes projects</h2>
+            <div class="projects-container">
+                <div class="project-container project-card">
+                    <img src="assets/image/confluence 1.jpg" alt="1er project" loading="lazy" class="project-pic" />
+                    <h3 class="project-title">1er project</h3>
+                    <p class="project-details">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eum, doloremque eligendi sunt
+                        aliquid dolorem accusantium ut rem deserunt ea et eius minima velit. Error iste atque quidem
+                        exercitationem minima!
+                    </p>
+                    <a href="#" target="_blank" class="project-link">Go voir
+                    </a>
+                </div>
+                <div class="project-container project-card">
+                    <img src="assets/image/Confluence 2.jpg" alt="2er project" loading="lazy" class="project-pic" />
+                    <h3 class="project-title">2eme project</h3>
+                    <p class="project-details">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eum, doloremque eligendi sunt
+                        aliquid dolorem accusantium ut rem deserunt ea et eius minima velit. Error iste atque quidem
+                        exercitationem minima!
+                    </p>
+                    <a href="#" target="_blank" class="project-link">Go voir
+                    </a>
+                </div>
+                <div class="project-container project-card">
+                    <img src="assets/image/confluence 3.jpg" alt="3er project" loading="lazy" class="project-pic" />
+                    <h3 class="project-title">3ème project</h3>
+                    <p class="project-details">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eum, doloremque eligendi sunt
+                        aliquid dolorem accusantium ut rem deserunt ea et eius minima velit. Error iste atque quidem
+                        exercitationem minima!
+                    </p>
+                    <a href="#" target="_blank" class="project-link">Go voir
+                    </a>
+                </div>
+                <div class="project-container project-card">
+                    <img src="assets/image/confluence 1.jpg" alt="1er project" loading="lazy" class="project-pic" />
+                    <h3 class="project-title">test</h3>
+                    <p class="project-details">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eum, doloremque eligendi sunt
+                        aliquid dolorem accusantium ut rem deserunt ea et eius minima velit. Error iste atque quidem
+                        exercitationem minima!
+                    </p>
+                    <a href="#" target="_blank" class="project-link">Go voir
+                    </a>
+                </div>
+            </div>
+        </section>
+        <!--FIN PROJETCS SECTION-->
+        <!--CONTACT SECTION-->
+        <section class="contact" id="contact">
+            <h2>Contactez moi</h2>
+            <div class="contact-form-container">
+                <div class="contact-form">
+                    <form action="https://formspree.io/f/mnqlkbng" method="post">
+                        <div class="form-control">
+                            <label for="name">Nom</label>
+                            <input type="text" id="name" name="sender-name" placeholder="Entrez votre nom"
+                                class="input-field" required>
+                        </div>
+                        <div class="form-control">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="sender-email" placeholder="Entrez votre email"
+                                class="input-field" required>
+                            <div class="form-control">
+                                <label for="message">Message</label>
+                                <textarea id="message" cols="60" rows="10" placeholder="Entrez votre message"
+                                    name="message" class="input-field" required>
+                        </textarea>
+                            </div>
+                            <input type="submit" value="submit" id="submit" class="submit-btn">
+                    </form>
+                </div>
+            </div>
+
+        </section>
+        <!--SOCIAL ACCOUNTS-->
+        <section class="social" id="social">
+            <div class="socials">
+                <a href="#" target="_blank">
+                    <img src="assets/icons/icons8-instagram.svg" alt="" loading="lazy" class="socicon">
+                </a>
+                <a href="#" target="_blank">
+                    <img src="assets/icons/icons8-twitter.svg" alt="" loading="lazy" class="socicon">
+                </a>
+                <a href="#" target="_blank">
+                    <img src="assets/icons/icons8-github.svg" alt="projet     2" loading="lazy" class="socicon">
+                </a>
+                <a href="#" target="_blank">
+                    <img src="assets/icons/icons8-linkedin.svg" alt="" loading="lazy" class="socicon">
                 </a>
             </div>
-            <div class="project-container project-card">
-                <div class="image"><img
-                src="/assets/image/Confluence 2.jpg"
-                alt="1er project"
-                loading="lazy"
-                class="project-pic"
-                />
-            </div>
-                <h3 class="project-title">2eme project</h3>
-                <p class="project-details">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eum, doloremque eligendi sunt aliquid dolorem accusantium ut rem deserunt ea et eius minima velit. Error iste atque quidem exercitationem minima!
-                </p>
-                <a href="#" target="_blank" class="project-link">Go voir
-                </a>
-            </div>
-            <div class="project-container project-card">
-                <div class="image"><img src="/assets/image/confluence 3.jpg"
-                alt="1er project"
-                loading="lazy"
-                class="project-pic"
-                />
-            </div>
-                <h3 class="project-title">3ème project</h3>
-                <p class="project-details">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eum, doloremque eligendi sunt aliquid dolorem accusantium ut rem deserunt ea et eius minima velit. Error iste atque quidem exercitationem minima!
-                </p>
-                <a href="#" target="_blank" class="project-link">Go voir
-                </a>
-            </div>
-        </div>
-    </section>
-    <!--FIN PROJETCS SECTION-->
-    <!--CONTACT SECTION-->
-    <!--SOCIAL ACCOUNTS-->
+        </section>
+    </div>
     <!--SCROLL TO TOP-->
     <!--FOOTER-->
+    <footer>
+        <p class="&copy">Copyright 2021</p>
+        <p class="copy">JR RCQ</p>
+    </footer>
+    <!--PARALLAX-->
+
+
     <!--SCRIPT-->
     <script type="texte/javascript" src="/assets/js/"></script>
     <!--Ion Icones scripts-->
