--- a/index.html
+++ b/index.html
@@ -152,14 +152,13 @@
                             <div class="form-control">
                                 <label for="message">Message</label>
                                 <textarea id="message" cols="60" rows="10" placeholder="Entrez votre message"
-                                    name="message" class="input-field" required>
-                        </textarea>
+                                    name="message" class="input-field" required></textarea>
                             </div>
                             <input type="submit" value="submit" id="submit" class="submit-btn">
                     </form>
                 </div>
             </div>
-
+            
         </section>
         <!--SOCIAL ACCOUNTS-->
         <section class="social" id="social">
