--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     </form>
                 </div>
             </div>
-            
+
         </section>
         <!--SOCIAL ACCOUNTS-->
         <section class="social" id="social">
@@ -179,6 +179,15 @@
         </section>
     </div>
     <!--SCROLL TO TOP-->
+    <section class="scroll-up">
+        <em class="scroll-up" id="scroll-up">
+            <img 
+            src="assets/icons/scroll2.png"
+            class="up-arrow" 
+            alt="scroll_up"/>
+        </em>
+
+    </section>
     <!--FOOTER-->
     <footer>
         <p class="&copy">Copyright 2021</p>
@@ -186,9 +195,9 @@
     </footer>
     <!--PARALLAX-->
 
-
     <!--SCRIPT-->
-    <script type="texte/javascript" src="/assets/js/"></script>
+    <script src="/assets/js/scroll-up.js"></script>
+
     <!--Ion Icones scripts-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.3/dist/ionicons/ionicons.esm.js">
     </script>
